# conflux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  init_repo.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
conflux/: __init__.py  cache.py  cka.py  config.py  eval.py  loss.py  profiler.py  rank_alloc.py  residual.py  svd_init.py  trainer.py  utils.py
examples/: cortex_multi_source.py  fehm_training.py
tests/: test_conflux.py
